--- a/static_files/index.html
+++ b/static_files/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Favorite Foods</title>
     <link rel="stylesheet" href="/style.css">
-    <script src="/form.js" defer></script>
+    <script src="form.js"></script>
 </head>
 <body>
     <div class="sidebar">
