--- a/static_files/index.html
+++ b/static_files/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Favorite Foods</title>
-    <link rel="stylesheet" href="/style.css">
-    <script src="form.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./form.js"></script>
+
 </head>
 <body>
     <div class="sidebar">
